fix opacity flicker

--- a/michael/scss/style.scss
+++ b/michael/scss/style.scss
@@ -93,7 +93,7 @@ $sm-bp: 850px;
     opacity: 1;
   }
   img {
-    background-color: #white;
+    background-color: $white;
   }
 }
 
